--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,14 +2,22 @@ project:
   type: website
 
 website:
-  title: "portfolio"
+  title: "Yannick Serge Obam"
   navbar:
+    left:
+      - href: index.qmd
+        text : Home
+      - href: projects.qmd
+        text : Projects
+      - href: resume.qmd
+        text : Resume
+     
     right:
       - about.qmd
       - icon: github
-        href: https://github.com/
+        href: https://github.com/obeshor
       - icon: twitter
-        href: https://twitter.com
+        href: https://twitter.com/OBAMSerge
 format:
   html:
     theme: cosmo
